Fixing spacing above nav.

--- a/App_Themes/WSMA/sass/NaturalHeritageSites/_WSMA.scss
+++ b/App_Themes/WSMA/sass/NaturalHeritageSites/_WSMA.scss
@@ -495,7 +495,7 @@ h2, .h2, .PanelHead.Distinguish,
             background-repeat: no-repeat;
             background-position: left;
             margin-bottom: 60px;
-            margin-top:89px;
+            margin-top:99px;
             .Wrapper-HomePage & {
                 display: none;
                 background-image: none;
