--- a/App_Themes/WSMA/sass/NaturalHeritageSites/layouts/_naturalHeritageSites-mp.scss
+++ b/App_Themes/WSMA/sass/NaturalHeritageSites/layouts/_naturalHeritageSites-mp.scss
@@ -189,7 +189,7 @@
    ========================================================================== */
    
 #masterContentArea {
-    margin-top: 4px;
+    margin-top: 0px;
     @include respond-to('grid small') {
         margin-top: 20px;
     }
