--- a/App_Themes/WSMA/sass/shared/_masterpage_styles.scss
+++ b/App_Themes/WSMA/sass/shared/_masterpage_styles.scss
@@ -122,7 +122,7 @@
         // }
     }
     @include respond-to('large') {
-        margin-top: 40px;
+        margin-top: 20px;
         // svg {
         //     .cls-1 {
         //         fill: none;
